# novajoin-tempest-plugin

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  readme.rst
novajoin_tempest_plugin/: README.rst  __init__.py  clients.py  config.py  plugin.py
novajoin_tempest_plugin/ipa/: ipa_client.py
novajoin_tempest_plugin/services/ipa/: __init__.py  ipa_client.py
novajoin_tempest_plugin/tests/: test_novajoin_tempest_plugin.py
novajoin_tempest_plugin/tests/scenario/: manager.py  novajoin_manager.py  test_novajoin_enrollment.py  test_tripleo_deployment.py  test_tripleo_tls.py
