[metadata]
name = novajoin_tempest_plugin
summary = OpenStack Novajoin tempest tests.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/novajoin-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    novajoin_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
tempest.test_plugins =
    novajoin_tests = novajoin_tempest_plugin.plugin:NovajoinTempestPlugin
